# twin-llm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: deploy.py  lambda_handler.py  me.txt  requirements.txt  server.py  summary.txt
backend/data/: facts.json  style.txt
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: twin.tsx
memory/: 7e002c9e-b5a4-4181-8954-77cb16891835.json  d47334c1-7ff5-40f3-868f-cff6368243c3.json
scripts/: deploy.ps1  deploy.sh  destroy.ps1
terraform/: api_gateway.tf  backend-setup.tf.bk  cloudfront.tf  dns.tf  iam.tf  lambda.tf  main.tf  s3.tf  versions.tf
