[project]
name = "twin"
version = "0.1.0"
description = "Twin LLM project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.95",
    "fastapi>=0.136.0",
    "mangum>=0.21.0",
    "pydf>=12",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.45.0",
]
